# CountyDataSync-1

./: # Azure ARM Template Code Citations.md  .env.example  .replit  CI_CD_GUIDE.md  CI_CD_GUIDE_ETL.md  CI_CD_IMPLEMENTATION.txt  GITHUB_WORKFLOW.md  INSTALLATION.md  PACKAGING.md  PACKAGING.txt  PACKAGING_GUIDE.md  README.md  app.py  azure-deployment.md  backup_script.py  build_executable.py  check_packaging_readiness.py  cicd_implementation_steps.txt  config.ini.example  config.py  countydatasync.spec  generate_icon.py  generate_spec.py  health_check.py  installation_guide.txt  main.py  models.py  package_application.py  pyproject.toml  replit.nix  requirements.txt  sync.py  sync_executable.py  sync_executable.spec  test_packaged_executable.py
attached_assets/: Pasted-Based-on-our-discussion-and-the-current-state-of-the-project-I-recommend-focusing-on-packaging-the--1744046269204.txt  Pasted-Below-is-a-deep-dive-into-the-full-ETL-process-for-CountyDataSync-covering-each-step-from-extractio-1744038836336.txt  Pasted-Below-is-a-deep-dive-review-of-the-CountyDataSync-1-build-on-Replit-along-with-a-set-of-next-steps--1744045503083.txt  Pasted-Enhanced-CI-CD-Implementation-Plan-Objectives-Automate-testing-unit-and-integration-tests-for-all-1744048330537.txt  Pasted-Integrating-Maintenance-Tasks-into-Your-CI-CD-Workflow-While-your-primary-CI-CD-pipeline-focuses-on--1744047363413.txt  Pasted-Packaging-the-Sync-Service-with-PyInstaller-1-Preparation-Verify-Local-Functionality-Ensure-that-y-1744046488284.txt
ci_cd/: performance_monitoring.py
docs/: packaging_guide.md
(+29 files in other folders)
